Fix overlap fat

--- a/event/static-assets/css/style.css
+++ b/event/static-assets/css/style.css
@@ -518,6 +518,9 @@ footer {
   content: "+";
 }
 
+.faq-collapse-fix {
+    padding-right: 40px !important;
+}
 
 
 /*
